@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.service.managehearings;
 
+import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -8,9 +9,9 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.tabdata.managehearings.HearingTabDataMapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocumentType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicMultiSelectList;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicMultiSelectListElement;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.YesOrNo;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.Hearing;
@@ -21,6 +22,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.managehearings.tab
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.ManageHearingsWrapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.express.ExpressCaseService;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -31,7 +33,6 @@ import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.APPLICANT;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT;
 
@@ -57,24 +58,26 @@ class ManageHearingActionServiceTest {
 
     @BeforeEach
     void setUp() {
-        hearing = createHearing(HearingType.DIR, "10:00", "30mins", java.time.LocalDate.now());
+        hearing = createHearing(HearingType.DIR, "10:00", "30mins", LocalDate.now());
         hearingWrapper = ManageHearingsWrapper.builder().workingHearing(hearing).build();
         finremCaseDetails = FinremCaseDetails.builder()
-            .data(FinremCaseData.builder().manageHearingsWrapper(hearingWrapper).build())
+            .data(uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData.builder()
+                .manageHearingsWrapper(hearingWrapper)
+                .build())
             .build();
     }
 
     @Test
     void performAddHearing_shouldAddHearingAndGenerateHearingNotice() {
         CaseDocument hearingNotice = createCaseDocument(HEARING_NOTICE_FILENAME, HEARING_NOTICE_URL);
-        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, AUTH_TOKEN))
+        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, "AUTH_TOKEN"))
             .thenReturn(hearingNotice);
 
-        manageHearingActionService.performAddHearing(finremCaseDetails, AUTH_TOKEN);
+        manageHearingActionService.performAddHearing(finremCaseDetails, "AUTH_TOKEN");
 
         assertThat(hearingWrapper.getHearings()).hasSize(1);
         assertThat(hearingWrapper.getHearingDocumentsCollection()).hasSize(1);
-        assertThat(hearingWrapper.getHearingDocumentsCollection().getFirst().getValue().getHearingDocument())
+        assertThat(hearingWrapper.getHearingDocumentsCollection().get(0).getValue().getHearingDocument())
             .isEqualTo(hearingNotice);
     }
 
@@ -84,25 +87,27 @@ class ManageHearingActionServiceTest {
 
         CaseDocument formC = createCaseDocument("FormC.pdf", "http://example.com/form-c");
         CaseDocument formG = createCaseDocument("FormG.pdf", "http://example.com/form-g");
-        Map<String, CaseDocument> pfdNcdrDocuments = Map.of(
-            "PFD_NCDR_COMPLIANCE_LETTER", createCaseDocument("ComplianceLetter.pdf", "http://example.com/compliance-letter"),
-            "PFD_NCDR_COVER_LETTER", createCaseDocument("CoverLetter.pdf", "http://example.com/cover-letter")
-        );
         CaseDocument outOfCourtResolution = createCaseDocument("OutOfCourtResolution.pdf", "http://example.com/OutOfCourtResolution");
 
-        when(manageHearingsDocumentService.generateFormC(finremCaseDetails, AUTH_TOKEN)).thenReturn(formC);
-        when(manageHearingsDocumentService.generateFormG(finremCaseDetails, AUTH_TOKEN)).thenReturn(formG);
-        when(manageHearingsDocumentService.generatePfdNcdrDocuments(finremCaseDetails, AUTH_TOKEN)).thenReturn(pfdNcdrDocuments);
-        when(manageHearingsDocumentService.generateOutOfCourtResolutionDoc(finremCaseDetails, AUTH_TOKEN)).thenReturn(outOfCourtResolution);
-        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, AUTH_TOKEN)).thenReturn(createCaseDocument(HEARING_NOTICE_FILENAME, HEARING_NOTICE_URL));
+        Map<String, Pair<CaseDocument, CaseDocumentType>>  pfdNcdrDocuments = Map.of(
+            "PFD_NCDR_COMPLIANCE_LETTER", Pair.of(createCaseDocument("ComplianceLetter.pdf", "http://example.com/compliance-letter"), CaseDocumentType.PFD_NCDR_COMPLIANCE_LETTER),
+            "PFD_NCDR_COVER_LETTER",  Pair.of(createCaseDocument("CoverLetter.pdf", "http://example.com/cover-letter"), CaseDocumentType.PFD_NCDR_COVER_LETTER));
 
-        manageHearingActionService.performAddHearing(finremCaseDetails, AUTH_TOKEN);
+        when(manageHearingsDocumentService.generateFormC(finremCaseDetails, "AUTH_TOKEN")).thenReturn(formC);
+        when(manageHearingsDocumentService.generateFormG(finremCaseDetails, "AUTH_TOKEN")).thenReturn(formG);
+        when(manageHearingsDocumentService.generatePfdNcdrDocuments(finremCaseDetails, "AUTH_TOKEN")).thenReturn(pfdNcdrDocuments);
+        when(manageHearingsDocumentService.generateOutOfCourtResolutionDoc(finremCaseDetails, "AUTH_TOKEN")).thenReturn(outOfCourtResolution);
+        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, "AUTH_TOKEN")).thenReturn(createCaseDocument(HEARING_NOTICE_FILENAME, HEARING_NOTICE_URL));
+
+        manageHearingActionService.performAddHearing(finremCaseDetails, "AUTH_TOKEN");
 
         assertThat(hearingWrapper.getHearingDocumentsCollection()).hasSize(6);
         assertThat(hearingWrapper.getHearingDocumentsCollection())
             .extracting(item -> item.getValue().getHearingDocument())
-            .contains(formC, formG, pfdNcdrDocuments.get("PFD_NCDR_COMPLIANCE_LETTER"),
-                pfdNcdrDocuments.get("PFD_NCDR_COVER_LETTER"), outOfCourtResolution);
+            .contains(formC, formG,
+                pfdNcdrDocuments.get("PFD_NCDR_COMPLIANCE_LETTER").getLeft(),
+                pfdNcdrDocuments.get("PFD_NCDR_COVER_LETTER").getLeft(),
+                outOfCourtResolution);
     }
 
     @Test
@@ -111,26 +116,28 @@ class ManageHearingActionServiceTest {
 
         CaseDocument formC = createCaseDocument("FormC.pdf", "http://example.com/form-c");
         CaseDocument formG = createCaseDocument("FormG.pdf", "http://example.com/form-g");
-        Map<String, CaseDocument> pfdNcdrDocuments = Map.of(
-            "PFD_NCDR_COMPLIANCE_LETTER", createCaseDocument("ComplianceLetter.pdf", "http://example.com/compliance-letter"),
-            "PFD_NCDR_COVER_LETTER", createCaseDocument("CoverLetter.pdf", "http://example.com/cover-letter")
-        );
         CaseDocument outOfCourtResolution = createCaseDocument("OutOfCourtResolution.pdf", "http://example.com/OutOfCourtResolution");
 
-        when(manageHearingsDocumentService.generateFormC(finremCaseDetails, AUTH_TOKEN)).thenReturn(formC);
-        when(manageHearingsDocumentService.generateFormG(finremCaseDetails, AUTH_TOKEN)).thenReturn(formG);
-        when(manageHearingsDocumentService.generatePfdNcdrDocuments(finremCaseDetails, AUTH_TOKEN)).thenReturn(pfdNcdrDocuments);
-        when(manageHearingsDocumentService.generateOutOfCourtResolutionDoc(finremCaseDetails, AUTH_TOKEN)).thenReturn(outOfCourtResolution);
-        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, AUTH_TOKEN)).thenReturn(createCaseDocument("HearingNotice.pdf", "http://example.com/hearing-notice"));
+        Map<String, Pair<CaseDocument, CaseDocumentType>>  pfdNcdrDocuments = Map.of(
+            "PFD_NCDR_COMPLIANCE_LETTER", Pair.of(createCaseDocument("ComplianceLetter.pdf", "http://example.com/compliance-letter"), CaseDocumentType.PFD_NCDR_COMPLIANCE_LETTER),
+            "PFD_NCDR_COVER_LETTER",  Pair.of(createCaseDocument("CoverLetter.pdf", "http://example.com/cover-letter"), CaseDocumentType.PFD_NCDR_COVER_LETTER));
+
+        when(manageHearingsDocumentService.generateFormC(finremCaseDetails, "AUTH_TOKEN")).thenReturn(formC);
+        when(manageHearingsDocumentService.generateFormG(finremCaseDetails, "AUTH_TOKEN")).thenReturn(formG);
+        when(manageHearingsDocumentService.generatePfdNcdrDocuments(finremCaseDetails, "AUTH_TOKEN")).thenReturn(pfdNcdrDocuments);
+        when(manageHearingsDocumentService.generateOutOfCourtResolutionDoc(finremCaseDetails, "AUTH_TOKEN")).thenReturn(outOfCourtResolution);
+        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, "AUTH_TOKEN")).thenReturn(createCaseDocument("HearingNotice.pdf", "http://example.com/hearing-notice"));
         when(expressCaseService.isExpressCase(finremCaseDetails.getData())).thenReturn(true);
 
-        manageHearingActionService.performAddHearing(finremCaseDetails, AUTH_TOKEN);
+        manageHearingActionService.performAddHearing(finremCaseDetails, "AUTH_TOKEN");
 
         assertThat(hearingWrapper.getHearingDocumentsCollection()).hasSize(6);
         assertThat(hearingWrapper.getHearingDocumentsCollection())
             .extracting(item -> item.getValue().getHearingDocument())
-            .contains(formC, formG, pfdNcdrDocuments.get("PFD_NCDR_COMPLIANCE_LETTER"),
-                pfdNcdrDocuments.get("PFD_NCDR_COVER_LETTER"), outOfCourtResolution);
+            .contains(formC, formG,
+                pfdNcdrDocuments.get("PFD_NCDR_COMPLIANCE_LETTER").getLeft(),
+                pfdNcdrDocuments.get("PFD_NCDR_COVER_LETTER").getLeft(),
+                outOfCourtResolution);
     }
 
     @Test
@@ -139,31 +146,32 @@ class ManageHearingActionServiceTest {
         finremCaseDetails.getData().setFastTrackDecision(YesOrNo.YES);
 
         CaseDocument formC = createCaseDocument("FormC.pdf", "http://example.com/form-c");
-        Map<String, CaseDocument> pfdNcdrDocuments = Map.of(
-            "PFD_NCDR_COMPLIANCE_LETTER", createCaseDocument("ComplianceLetter.pdf", "http://example.com/compliance-letter"),
-            "PFD_NCDR_COVER_LETTER", createCaseDocument("CoverLetter.pdf", "http://example.com/cover-letter")
-        );
         CaseDocument outOfCourtResolution = createCaseDocument("OutOfCourtResolution.pdf", "http://example.com/OutOfCourtResolution");
+        Map<String, Pair<CaseDocument, CaseDocumentType>>  pfdNcdrDocuments = Map.of(
+            "PFD_NCDR_COMPLIANCE_LETTER", Pair.of(createCaseDocument("ComplianceLetter.pdf", "http://example.com/compliance-letter"), CaseDocumentType.PFD_NCDR_COMPLIANCE_LETTER),
+            "PFD_NCDR_COVER_LETTER",  Pair.of(createCaseDocument("CoverLetter.pdf", "http://example.com/cover-letter"), CaseDocumentType.PFD_NCDR_COVER_LETTER));
 
-        when(manageHearingsDocumentService.generateFormC(finremCaseDetails, AUTH_TOKEN)).thenReturn(formC);
-        when(manageHearingsDocumentService.generatePfdNcdrDocuments(finremCaseDetails, AUTH_TOKEN)).thenReturn(pfdNcdrDocuments);
-        when(manageHearingsDocumentService.generateOutOfCourtResolutionDoc(finremCaseDetails, AUTH_TOKEN)).thenReturn(outOfCourtResolution);
-        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, AUTH_TOKEN)).thenReturn(createCaseDocument("HearingNotice.pdf", "http://example.com/hearing-notice"));
+        when(manageHearingsDocumentService.generateFormC(finremCaseDetails, "AUTH_TOKEN")).thenReturn(formC);
+        when(manageHearingsDocumentService.generatePfdNcdrDocuments(finremCaseDetails, "AUTH_TOKEN")).thenReturn(pfdNcdrDocuments);
+        when(manageHearingsDocumentService.generateOutOfCourtResolutionDoc(finremCaseDetails, "AUTH_TOKEN")).thenReturn(outOfCourtResolution);
+        when(manageHearingsDocumentService.generateHearingNotice(finremCaseDetails, "AUTH_TOKEN")).thenReturn(createCaseDocument("HearingNotice.pdf", "http://example.com/hearing-notice"));
 
-        manageHearingActionService.performAddHearing(finremCaseDetails, AUTH_TOKEN);
+        manageHearingActionService.performAddHearing(finremCaseDetails, "AUTH_TOKEN");
 
         assertThat(hearingWrapper.getHearingDocumentsCollection()).hasSize(5);
         assertThat(hearingWrapper.getHearingDocumentsCollection())
             .extracting(item -> item.getValue().getHearingDocument())
-            .contains(formC, pfdNcdrDocuments.get("PFD_NCDR_COMPLIANCE_LETTER"),
-                pfdNcdrDocuments.get("PFD_NCDR_COVER_LETTER"), outOfCourtResolution);
+            .contains(formC,
+                pfdNcdrDocuments.get("PFD_NCDR_COMPLIANCE_LETTER").getLeft(),
+                pfdNcdrDocuments.get("PFD_NCDR_COVER_LETTER").getLeft(),
+                outOfCourtResolution);
 
-        verify(manageHearingsDocumentService, never()).generateFormG(finremCaseDetails, AUTH_TOKEN);
+        verify(manageHearingsDocumentService, never()).generateFormG(finremCaseDetails, "AUTH_TOKEN");
     }
 
     @Test
     void updateTabData_shouldAddHearingToTabCollectionInCorrectOrder() {
-        Hearing hearing1 = createHearing(HearingType.DIR, "10:00", "30mins", java.time.LocalDate.of(2025, 7, 20));
+        Hearing hearing1 = createHearing(HearingType.DIR, "10:00", "30mins", LocalDate.of(2025, 7, 20));
         hearing1.setPartiesOnCaseMultiSelectList(DynamicMultiSelectList
             .builder()
             .listItems(List.of(
@@ -174,7 +182,7 @@ class ManageHearingActionServiceTest {
             .build()
         );
 
-        Hearing hearing2 = createHearing(HearingType.FDA, "11:00", "1hr", java.time.LocalDate.of(2025, 7, 15));
+        Hearing hearing2 = createHearing(HearingType.FDA, "11:00", "1hr", LocalDate.of(2025, 7, 15));
         hearing2.setPartiesOnCaseMultiSelectList(DynamicMultiSelectList
             .builder()
             .listItems(List.of(
@@ -202,7 +210,7 @@ class ManageHearingActionServiceTest {
         assertThat(hearingTabItems.get(1).getValue().getTabDateTime()).isEqualTo("20 Jul 2025 10:00");
     }
 
-    private Hearing createHearing(HearingType type, String time, String estimate, java.time.LocalDate date) {
+    private Hearing createHearing(HearingType type, String time, String estimate, LocalDate date) {
         return Hearing.builder()
             .hearingType(type)
             .hearingDate(date)
